Fixed visibility and off screen text on the experience page

--- a/experience/index.html
+++ b/experience/index.html
@@ -23,143 +23,143 @@
 			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
-		<div class="img-wrap">
+		<div class="content">
 			<img src="/images/Mountain.jpg" class="bg-img">
+			<ul class="timeline">
+				<li class="point" tabindex="0" style="top: 0%">
+					<!--EN-->
+					<h4 class="en">August 2022-</h4>
+					<h2 class="en">UiT-The arctic university of Norway</h2>
+					<p class="en">I am now an apprentice at first-line IT support at UiT.</p>
+					<!--NB-->
+					<h4 class="nb">August 2022-d.d</h4>
+					<h2 class="nb">UiT-Norges arktiske universitet</h2>
+					<p class="nb">Jeg er nå lærling som førstelinje IT-support på UiT.</p>
+				</li>
+				<li class="point point-left" tabindex="0" style="top: 16.68%">
+					<!--EN-->
+					<h4 class="en">2022</h4>
+					<h2 class="en">Ramsalt</h2>
+					<p class="en">
+						In the second half of vg2, I was at Ramsalt in professional
+						practice. While I was there I learned a little Drupal and
+						made my own home page/blog with it.
+						<br><br>
+						(Write more about Ramsalt)
+					</p>
+					<!--NB-->
+					<h4 class="nb">2022</h4>
+					<h2 class="nb">Ramsalt</h2>
+					<p class="nb">
+						I andre halvår av vg2 var jeg på Ramsalt i yrkespraksis. Der
+						jeg fikk lært meg litt Drupal og laget min egen
+						hjemeside/blog med det.
+						<br><br>
+						(Skriv mere om Ramsalt)
+					</p>
+				</li>
+				<li class="point" tabindex="0" style="top: 33.34%">
+					<!--EN-->
+					<h4 class="en">2021</h4>
+					<h2 class="en">Tromso kommune, section for IT</h2>
+					<p class="en">
+						In the first half of vg2, I was at Tromso kommune in
+						professional practice. While there I was doing first-line work
+						such as responding to support tickets in addition to re-
+						installing PCs operating systems.
+					</p>
+					<!--NB-->
+					<h4 class="nb">2021</h4>
+					<h2 class="nb">Tromsø kommune, seksjon for IT</h2>
+					<p class="nb">
+						I først halvår av vg2 var jeg på Tromsø kommune i
+						yrkespraksis. Der var jeg i førstelinjen og svarte på support-
+						tickets i tillegg til å tanke/re-installerte PC-er.
+					</p>
+				</li>
+				<li class="point point-left" tabindex="0" style="top: 50%">
+					<!--EN-->
+					<h4 class="en">August 2020-June 2022</h4>
+					<h2 class="en">Breivang vgs</h2>
+					<p class="en">
+						I went to Breivang vgs, Information technology and
+						media production vg1 and Information technology vg2.
+					</p>
+					<!--NB-->
+					<h4 class="nb">August 2020-Juni 2022</h4>
+					<h2 class="nb">Breivang vgs</h2>
+					<p class="nb">
+						Jeg gikk på Breivang vgs, Informasjonsteknologi og
+						medieproduksjon vg1 og Informasjonsteknologi vg2.
+					</p>
+				</li>
+				<li class="point" tabindex="0" style="top: 66.68%">
+					<!--EN-->
+					<h4 class="en">2019</h4>
+					<h2 class="en">Journalist, iTromsø</h2>
+					<p class="en">
+						I was a journalist for iTromsø during pryo week where I had
+						the opertunity to work independently. I interviewed a 
+						friend, was a photographer for a kindergarten (or primary
+						school, must check), interviewed people on the street, etc.
+					</p>
+					<!--NB-->
+					<h4 class="nb">2019</h4>
+					<h2 class="nb">Journalist, iTromsø</h2>
+					<p class="nb">
+						Jeg var journalist for iTromsø i pryo-uken der jeg fikk jobbe
+						mye på egenhånd. Jeg intervjuet blandt annet en venn, 
+						var fotograf for en barnehage (eller barneskole, må
+						sjekke), intervjuet folk på gaten, etc.
+					</p>
+				</li>
+				<li class="point point-left" tabindex="0" style="top: 83.35%">
+					<!--EN-->
+					<h4 class="en">August 2017–June 2020</h4>
+					<h2 class="en">Langnes ungdomsskole</h2>
+					<p class="en">
+						I finished Langnes middle school
+						<br><br>
+						(Write more about Langnes)
+					</p>
+					<!--NB-->
+					<h4 class="nb">August 2017–Juni 2020</h4>
+					<h2 class="nb">Langnes ungdomsskole</h2>
+					<p class="nb">
+						Jeg fullførte Langnes ungdomsskole
+						<br><br>
+						(Skriv mere om Langnes)
+					</p>
+				</li>
+				<li class="point" tabindex="0" style="top: 100%">
+					<!--EN-->
+					<h4 class="en">2014–2016</h4>
+					<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
+					<p class="en">
+						I participated in FIRST LEGO Leauge. It is a technology 
+						competition where you build and program a Lego robot in
+						addition to doing research projects. In 2014-2015, my team
+						reached the Scandinavian final and in 2015-2016, my team
+						reached the international final. 
+						<br><br>
+						Regarding the competition, I have given lectures and
+						presentations in multiple conferences.
+					</p>
+					<!--NB-->
+					<h4 class="nb">2014–2016</h4>
+					<h2 class="nb">Teknologikonkurransen FIRST LEGO Leauge</h2>
+					<p class="nb">
+						Jeg var med i teknologikonkurransen FIRST LEGO Leauge
+						som er en konkurranse der du bygger og programmerer en
+						Lego robot i tillegg til å gjøre forskningsprosjekter. i 2014–
+						2015 kom laget mitt til den skandinaviske finalen og i 2015–
+						2016 kom laget mitt til den internasjonale finalen.
+						<br><br>
+						Angående konkurransen har jeg holdt foredrag og
+						presentasjon i flere konferanser.
+					</p>
+				</li>
+			</ul>
 		</div>
-		<ul class="timeline">
-			<li class="point" tabindex="0" style="top: 0%">
-				<!--EN-->
-				<h4 class="en">August 2022-</h4>
-				<h2 class="en">UiT-The arctic university of Norway</h2>
-				<p class="en">I am now an apprentice at first-line IT support at UiT.</p>
-				<!--NB-->
-				<h4 class="nb">August 2022-d.d</h4>
-				<h2 class="nb">UiT-Norges arktiske universitet</h2>
-				<p class="nb">Jeg er nå lærling som førstelinje IT-support på UiT.</p>
-			</li>
-			<li class="point point-left" tabindex="0" style="top: 16.68%">
-				<!--EN-->
-				<h4 class="en">2022</h4>
-				<h2 class="en">Ramsalt</h2>
-				<p class="en">
-					In the second half of vg2, I was at Ramsalt in professional
-					practice. While I was there I learned a little Drupal and
-					made my own home page/blog with it.
-					<br><br>
-					(Write more about Ramsalt)
-				</p>
-				<!--NB-->
-				<h4 class="nb">2022</h4>
-				<h2 class="nb">Ramsalt</h2>
-				<p class="nb">
-					I andre halvår av vg2 var jeg på Ramsalt i yrkespraksis. Der
-					jeg fikk lært meg litt Drupal og laget min egen
-					hjemeside/blog med det.
-					<br><br>
-					(Skriv mere om Ramsalt)
-				</p>
-			</li>
-			<li class="point" tabindex="0" style="top: 33.34%">
-				<!--EN-->
-				<h4 class="en">2021</h4>
-				<h2 class="en">Tromso kommune, section for IT</h2>
-				<p class="en">
-					In the first half of vg2, I was at Tromso kommune in
-					professional practice. While there I was doing first-line work
-					such as responding to support tickets in addition to re-
-					installing PCs operating systems.
-				</p>
-				<!--NB-->
-				<h4 class="nb">2021</h4>
-				<h2 class="nb">Tromsø kommune, seksjon for IT</h2>
-				<p class="nb">
-					I først halvår av vg2 var jeg på Tromsø kommune i
-					yrkespraksis. Der var jeg i førstelinjen og svarte på support-
-					tickets i tillegg til å tanke/re-installerte PC-er.
-				</p>
-			</li>
-			<li class="point point-left" tabindex="0" style="top: 50%">
-				<!--EN-->
-				<h4 class="en">August 2020-June 2022</h4>
-				<h2 class="en">Breivang vgs</h2>
-				<p class="en">
-					I went to Breivang vgs, Information technology and
-					media production vg1 and Information technology vg2.
-				</p>
-				<!--NB-->
-				<h4 class="nb">August 2020-Juni 2022</h4>
-				<h2 class="nb">Breivang vgs</h2>
-				<p class="nb">
-					Jeg gikk på Breivang vgs, Informasjonsteknologi og
-					medieproduksjon vg1 og Informasjonsteknologi vg2.
-				</p>
-			</li>
-			<li class="point" tabindex="0" style="top: 66.68%">
-				<!--EN-->
-				<h4 class="en">2019</h4>
-				<h2 class="en">Journalist, iTromsø</h2>
-				<p class="en">
-					I was a journalist for iTromsø during pryo week where I had
-					the opertunity to work independently. I interviewed a 
-					friend, was a photographer for a kindergarten (or primary
-					school, must check), interviewed people on the street, etc.
-				</p>
-				<!--NB-->
-				<h4 class="nb">2019</h4>
-				<h2 class="nb">Journalist, iTromsø</h2>
-				<p class="nb">
-					Jeg var journalist for iTromsø i pryo-uken der jeg fikk jobbe
-					mye på egenhånd. Jeg intervjuet blandt annet en venn, 
-					var fotograf for en barnehage (eller barneskole, må
-					sjekke), intervjuet folk på gaten, etc.
-				</p>
-			</li>
-			<li class="point point-left" tabindex="0" style="top: 83.35%">
-				<!--EN-->
-				<h4 class="en">August 2017–June 2020</h4>
-				<h2 class="en">Langnes ungdomsskole</h2>
-				<p class="en">
-					I finished Langnes middle school
-					<br><br>
-					(Write more about Langnes)
-				</p>
-				<!--NB-->
-				<h4 class="nb">August 2017–Juni 2020</h4>
-				<h2 class="nb">Langnes ungdomsskole</h2>
-				<p class="nb">
-					Jeg fullførte Langnes ungdomsskole
-					<br><br>
-					(Skriv mere om Langnes)
-				</p>
-			</li>
-			<li class="point" tabindex="0" style="top: 100%">
-				<!--EN-->
-				<h4 class="en">2014–2016</h4>
-				<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
-				<p class="en">
-					I participated in FIRST LEGO Leauge. It is a technology 
-					competition where you build and program a Lego robot in
-					addition to doing research projects. In 2014-2015, my team
-					reached the Scandinavian final and in 2015-2016, my team
-					reached the international final. 
-					<br><br>
-					Regarding the competition, I have given lectures and
-					presentations in multiple conferences.
-				</p>
-				<!--NB-->
-				<h4 class="nb">2014–2016</h4>
-				<h2 class="nb">Teknologikonkurransen FIRST LEGO Leauge</h2>
-				<p class="nb">
-					Jeg var med i teknologikonkurransen FIRST LEGO Leauge
-					som er en konkurranse der du bygger og programmerer en
-					Lego robot i tillegg til å gjøre forskningsprosjekter. i 2014–
-					2015 kom laget mitt til den skandinaviske finalen og i 2015–
-					2016 kom laget mitt til den internasjonale finalen.
-					<br><br>
-					Angående konkurransen har jeg holdt foredrag og
-					presentasjon i flere konferanser.
-				</p>
-			</li>
-		</ul>
     </body>
 </html>
