Added portfolio page

--- a/experience/index.html
+++ b/experience/index.html
@@ -6,7 +6,6 @@
 		<title>Experience</title>
 		<link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="/experience/style.css" type="text/css" />
-		<link rel="stylesheet" href="/global/general.css" type="text/css" />
         <link rel="stylesheet" href="/global/menu.css" type="text/css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,6 +19,8 @@
 			<a href="/" class="nb">Hjem</a>
 			<a href="/experience/" class="active en">Experience</a>
 			<a href="/experience/" class="active nb">Erfaring</a>
+			<a href="/portfolio/" class="en">Portfolio</a>
+			<a href="/portfolio/" class="nb">Portefølje</a>
 			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
