--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			<a href="/" class="active nb">Hjem</a>
 			<a href="/experience/" class="en">Experience</a>
 			<a href="/experience/" class="nb">Erfaring</a>
+			<a href="/portfolio/" class="en">Portfolio</a>
+			<a href="/portfolio/" class="nb">Portefølje</a>
 			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
