Added enter transition to points on the experience page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,9 +36,21 @@
 				</a>
 			</li>
 			<li>
-				<a href="https://github.com/EmilBjorkeng/Gregs-Adventure">
-					<img src="/images/gregs-adventure.png">
-					<h3>Gregs adventure</h3>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
 				</a>
 			</li>
 			<li>
