--- a/experience/index.html
+++ b/experience/index.html
@@ -11,6 +11,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
 		<script type="text/javascript", src="/global/script.js" defer></script>
+		<script type="text/javascript", src="/experience/script.js" defer></script>
     </head>
     <body>
 		<!--Menu-->
@@ -25,7 +26,7 @@
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
 		</div>
 		<div class="content">
-			<img src="/images/Mountain.jpg" class="bg-img">
+			<img src="/images/mountain.jpg" class="bg-img">
 			<ul class="timeline">
 				<li class="point" tabindex="0" style="top: 0%">
 					<!--EN-->
