--- a/experience/index.html
+++ b/experience/index.html
@@ -4,51 +4,43 @@
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Experience</title>
-		<link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/100360572?v=4" />
-		<link rel="stylesheet" href="/experience/style.css" type="text/css" />
-        <link rel="stylesheet" href="/global/menu.css" type="text/css" />
+		<link rel="icon" type="image/png" media="(prefers-color-scheme: dark)" href="/images/favicon-dark.png" />
+		<link rel="icon" type="image/png" media="(not (prefers-color-scheme: dark))" href="/images/favicon-light.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" />
-		<script type="text/javascript", src="/global/script.js" defer></script>
-		<script type="text/javascript", src="/experience/script.js" defer></script>
+		<link rel="stylesheet" href="/experience/style.css" type="text/css" />
+        <link rel="stylesheet" href="/global/menu.css" type="text/css" />
+		<script type="application/javascript", src="/global/cookies.js" defer></script>
+		<script type="application/javascript", src="/global/script.js" defer></script>
+		<script type="application/javascript", src="/experience/script.js" defer></script>
     </head>
     <body>
 		<!--Menu-->
 		<div class="menu">
-			<a href="/" class="en">Home</a>
 			<a href="/" class="nb">Hjem</a>
-			<a href="/experience/" class="active en">Experience</a>
+			<a href="/" class="en">Home</a>
 			<a href="/experience/" class="active nb">Erfaring</a>
-			<a href="/portfolio/" class="en">Portfolio</a>
-			<a href="/portfolio/" class="nb">Portefølje</a>
-			<a href="javascript:langSwitch('nb')" class="en">NB</a>
+			<a href="/experience/" class="active en">Experience</a>
+			<a href="/photos/" class="nb">Bilder</a>
+			<a href="/photos/" class="en">Photos</a>
 			<a href="javascript:langSwitch('en')" class="nb">EN</a>
+			<a href="javascript:langSwitch('nb')" class="en">NB</a>
 		</div>
-		<div class="content">
+		<main class="content">
 			<img src="/images/mountain.jpg" class="bg-img">
 			<ul class="timeline">
 				<li class="point" tabindex="0" style="top: 0%">
-					<!--EN-->
-					<h4 class="en">August 2022-</h4>
-					<h2 class="en">UiT-The arctic university of Norway</h2>
-					<p class="en">I am now an apprentice at first-line IT support at UiT.</p>
 					<!--NB-->
 					<h4 class="nb">August 2022-d.d</h4>
-					<h2 class="nb">UiT-Norges arktiske universitet</h2>
-					<p class="nb">Jeg er nå lærling som førstelinje IT-support på UiT.</p>
+					<h2 class="nb">UiT Norges arktiske universitet</h2>
+					<p class="nb">Jeg er nå lærling som andrelinje IT-support på UiT.</p>
+					<!--EN-->
+					<h4 class="en">August 2022-</h4>
+					<h2 class="en">UiT The arctic university of Norway</h2>
+					<p class="en">I am now an apprentice at secound-line IT support at UiT.</p>
 				</li>
 				<li class="point point-left" tabindex="0" style="top: 16.68%">
-					<!--EN-->
-					<h4 class="en">2022</h4>
-					<h2 class="en">Ramsalt</h2>
-					<p class="en">
-						In the second half of vg2, I was at Ramsalt in professional
-						practice. While I was there I learned a little Drupal and
-						made my own home page/blog with it.
-						<br><br>
-						(Write more about Ramsalt)
-					</p>
 					<!--NB-->
 					<h4 class="nb">2022</h4>
 					<h2 class="nb">Ramsalt</h2>
@@ -59,8 +51,26 @@
 						<br><br>
 						(Skriv mere om Ramsalt)
 					</p>
+					<!--EN-->
+					<h4 class="en">2022</h4>
+					<h2 class="en">Ramsalt</h2>
+					<p class="en">
+						In the second half of vg2, I was at Ramsalt in professional
+						practice. While I was there I learned a little Drupal and
+						made my own home page/blog with it.
+						<br><br>
+						(Write more about Ramsalt)
+					</p>
 				</li>
 				<li class="point" tabindex="0" style="top: 33.34%">
+					<!--NB-->
+					<h4 class="nb">2021</h4>
+					<h2 class="nb">Tromsø kommune, seksjon for IT</h2>
+					<p class="nb">
+						I først halvår av vg2 var jeg på Tromsø kommune i
+						yrkespraksis. Der var jeg i førstelinjen og svarte på support-
+						tickets i tillegg til å tanke/re-installerte PC-er.
+					</p>
 					<!--EN-->
 					<h4 class="en">2021</h4>
 					<h2 class="en">Tromso kommune, section for IT</h2>
@@ -70,23 +80,8 @@
 						such as responding to support tickets in addition to re-
 						installing PCs operating systems.
 					</p>
-					<!--NB-->
-					<h4 class="nb">2021</h4>
-					<h2 class="nb">Tromsø kommune, seksjon for IT</h2>
-					<p class="nb">
-						I først halvår av vg2 var jeg på Tromsø kommune i
-						yrkespraksis. Der var jeg i førstelinjen og svarte på support-
-						tickets i tillegg til å tanke/re-installerte PC-er.
-					</p>
 				</li>
 				<li class="point point-left" tabindex="0" style="top: 50%">
-					<!--EN-->
-					<h4 class="en">August 2020-June 2022</h4>
-					<h2 class="en">Breivang vgs</h2>
-					<p class="en">
-						I went to Breivang vgs, Information technology and
-						media production vg1 and Information technology vg2.
-					</p>
 					<!--NB-->
 					<h4 class="nb">August 2020-Juni 2022</h4>
 					<h2 class="nb">Breivang vgs</h2>
@@ -94,17 +89,15 @@
 						Jeg gikk på Breivang vgs, Informasjonsteknologi og
 						medieproduksjon vg1 og Informasjonsteknologi vg2.
 					</p>
+					<!--EN-->
+					<h4 class="en">August 2020-June 2022</h4>
+					<h2 class="en">Breivang vgs</h2>
+					<p class="en">
+						I went to Breivang vgs, Information technology and
+						media production vg1 and Information technology vg2.
+					</p>
 				</li>
 				<li class="point" tabindex="0" style="top: 66.68%">
-					<!--EN-->
-					<h4 class="en">2019</h4>
-					<h2 class="en">Journalist, iTromsø</h2>
-					<p class="en">
-						I was a journalist for iTromsø during pryo week where I had
-						the opertunity to work independently. I interviewed a 
-						friend, was a photographer for a kindergarten (or primary
-						school, must check), interviewed people on the street, etc.
-					</p>
 					<!--NB-->
 					<h4 class="nb">2019</h4>
 					<h2 class="nb">Journalist, iTromsø</h2>
@@ -114,16 +107,17 @@
 						var fotograf for en barnehage (eller barneskole, må
 						sjekke), intervjuet folk på gaten, etc.
 					</p>
+					<!--EN-->
+					<h4 class="en">2019</h4>
+					<h2 class="en">Journalist, iTromsø</h2>
+					<p class="en">
+						I was a journalist for iTromsø during pryo week where I had
+						the opertunity to work independently. I interviewed a 
+						friend, was a photographer for a kindergarten (or primary
+						school, must check), interviewed people on the street, etc.
+					</p>
 				</li>
 				<li class="point point-left" tabindex="0" style="top: 83.35%">
-					<!--EN-->
-					<h4 class="en">August 2017–June 2020</h4>
-					<h2 class="en">Langnes ungdomsskole</h2>
-					<p class="en">
-						I finished Langnes middle school
-						<br><br>
-						(Write more about Langnes)
-					</p>
 					<!--NB-->
 					<h4 class="nb">August 2017–Juni 2020</h4>
 					<h2 class="nb">Langnes ungdomsskole</h2>
@@ -132,21 +126,16 @@
 						<br><br>
 						(Skriv mere om Langnes)
 					</p>
+					<!--EN-->
+					<h4 class="en">August 2017–June 2020</h4>
+					<h2 class="en">Langnes ungdomsskole</h2>
+					<p class="en">
+						I finished Langnes middle school
+						<br><br>
+						(Write more about Langnes)
+					</p>
 				</li>
 				<li class="point" tabindex="0" style="top: 100%">
-					<!--EN-->
-					<h4 class="en">2014–2016</h4>
-					<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
-					<p class="en">
-						I participated in FIRST LEGO Leauge. It is a technology 
-						competition where you build and program a Lego robot in
-						addition to doing research projects. In 2014-2015, my team
-						reached the Scandinavian final and in 2015-2016, my team
-						reached the international final. 
-						<br><br>
-						Regarding the competition, I have given lectures and
-						presentations in multiple conferences.
-					</p>
 					<!--NB-->
 					<h4 class="nb">2014–2016</h4>
 					<h2 class="nb">Teknologikonkurransen FIRST LEGO Leauge</h2>
@@ -160,8 +149,21 @@
 						Angående konkurransen har jeg holdt foredrag og
 						presentasjon i flere konferanser.
 					</p>
+					<!--EN-->
+					<h4 class="en">2014–2016</h4>
+					<h2 class="en">The technology competition FIRST LEGO Leauge</h2>
+					<p class="en">
+						I participated in FIRST LEGO Leauge. It is a technology 
+						competition where you build and program a Lego robot in
+						addition to doing research projects. In 2014-2015, my team
+						reached the Scandinavian final and in 2015-2016, my team
+						reached the international final. 
+						<br><br>
+						Regarding the competition, I have given lectures and
+						presentations in multiple conferences.
+					</p>
 				</li>
 			</ul>
-		</div>
+		</main>
     </body>
 </html>
