Added '/' before the css links

--- a/dart/index.html
+++ b/dart/index.html
@@ -9,9 +9,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="dart/start.css" type="text/css" />	
-        <link rel="stylesheet" href="dart/style.css" type="text/css" />
-		<link rel="stylesheet" href="dart/board.css" type="text/css" />
+        <link rel="stylesheet" href="/dart/start.css" type="text/css" />	
+        <link rel="stylesheet" href="/dart/style.css" type="text/css" />
+		<link rel="stylesheet" href="/dart/board.css" type="text/css" />
         <script type="application/javascript", src="/dart/start.js" defer></script>
         <script type="application/javascript", src="/dart/board.js" defer></script>
         <script type="application/javascript", src="/dart/points.js" defer></script>
