Updated some background code on the dart page

--- a/dart/index.html
+++ b/dart/index.html
@@ -48,8 +48,7 @@
             </div>
             <div class="point-board">
                 <button class="turn-button next-turn" onclick="nextTurn()">Next Turn</button>
-                <!--<button class="undo-turn" onclick="undoLastTurn()">Undo Turn</button>-->
-                <button class="turn-button undo-turn" onclick="alert('Currently out of order')">Undo Turn</button>
+                <!--<button class="turn-button undo-turn" onclick="undoLastTurn()">Undo Turn</button>-->
                 <button class="turn-button bust-button" onclick="bustButton()">Bust</button>
                 <button class="turn-button new-game" onclick="start()">New Game</button>
                 <div id="player-list"></div>
