--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type=”image/x-icon” href="/favicon.ico" />
         <title>404</title>
-        <link rel="stylesheet", href="/404/style.css">
+        <link rel="stylesheet", href="/404.css">
     </head>
     <body>
         <div class="outside-wrapper">
