Add cos/sin related learning pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<div class="project">
 			<img src="/images/newTab.png" draggable="false" />
 			<span>
+				<h2>newTab</h2>
 				newTab is a Firefox extension that changes the appearance of the new tab page. It has a simple design with just a Firefox logo and text in the center of the screen, and a solid colour background. There is a side menu that can be accessed by clicking the settings icon in the top right corner. From the menu, you can choose from a variety of backgrounds to use as your new tab background. Just click on one of the options to set it as your background. If you want to go back to the solid colour background, simply click on the selected image again to deselect it. All the photos have credits in the bottom left corner.
 				<br><br>
 				Links: <a href="https://addons.mozilla.org/en-US/firefox/addon/emil-newtab/">Firefox Add-ons</a>
@@ -35,6 +36,7 @@
 		<hr>
 		<div class="project">
 			<span>
+				<h2>Wolfenstein-like-Renderer</h2>
 				My version of the classical Wolfenstein like game renderer project. It is made using SDL2 and works by shooting rays from a 2D character onto a 2D map and interpreting that in 3D.
 				<br><br>
 				Links: <a href="https://github.com/EmilBjorkeng/Wolfenstein-like-Renderer?tab=readme-ov-file">Github</a>
