--- a/learning/index.html
+++ b/learning/index.html
@@ -17,5 +17,7 @@
     <a href="/learning/hex">Hexadecimal</a>
     <a href="/learning/binary">Binary</a>
     <a href="/learning/primenumber">Prime Number</a>
+    <a href="/learning/enhetssirkelen">Enhetssirkelen</a>
+    <a href="/learning/trigonometry">Trigonometry</a>
 </body>
 </html>
