Add functionality to prime number learning page

--- a/learning/binary/index.html
+++ b/learning/binary/index.html
@@ -31,6 +31,10 @@
                 </form>
                 <span id="indicator"></span>
             </div>
+            <div class="checkboxes">
+                <span>Padding: </span>
+                <input type="checkbox" id="padding-checkbox" tabindex="-1" checked='true' />
+            </div>
         </div>
     </div>
 </body>
