Update Learning pages

--- a/learning/enhetssirkelen/index.html
+++ b/learning/enhetssirkelen/index.html
@@ -27,6 +27,10 @@
                     <input type="submit" value="Submit" id="submit" tabindex="-1" />
                 </form>
             </div>
+            <div class="checkboxes">
+                <span>Simple: </span>
+                <input type="checkbox" id="simple-checkbox" tabindex="-1" />
+            </div>
         </div>
     </div>
 </body>
