--- a/learning/binary/index.html
+++ b/learning/binary/index.html
@@ -10,8 +10,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/learning/learning.css" type="text/css" />
+    <link rel="stylesheet" href="/learning/phone.css" type="text/css" />
     <link rel="stylesheet" href="/learning/binary/style.css" type="text/css" />
     <script type="application/javascript" src="/learning/binary/script.js" defer></script>
+    <script type="application/javascript" src="/learning/phone.js" defer></script>
 </head>
 <body>
     <div class="outside-wrapper">
