--- a/learning/index.html
+++ b/learning/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Learning</title>
     <link rel="icon" type=”image/svg+xml” href="/svg/favicon.svg" />
+    <script type="application/javascript", src="/learning/script.js" defer></script>
     <style>
         a {
             display: block;
